# sqooler-example

./: .env.example  .pre-commit-config.yaml  README.md  maintainer.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: mkdocs.yml  spooler_tests.yml
docs/: index.md
fermions/: config.py  spooler.py
fermions/tests/: test_fermion.py
multiqudit/: config.py  spooler.py
multiqudit/tests/: test_multi_qudit.py
rydberg/: config.py  spooler.py
rydberg/tests/: test_rydberg.py
singlequdit/: config.py  spooler.py
singlequdit/tests/: test_single_qudit.py
v0.1/: 404.html  index.html  objects.inv
v0.1/fermions/: index.html
v0.1/multiqudit/: index.html
v0.1/rydberg/: index.html
v0.1/search/: search_index.json
v0.1/singlequdit/: index.html
