[tool.poetry]
name = "sqooler-example"
version = "0.1.0"
description = "A template for quantum simulators deployed on heroku"
authors = ["fretchen <fred.jendrzejewski@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqooler = {path = "../sqooler-fretchen", develop = true}
numpy = "^1.24.3"
scipy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
