[tool.poetry]
name = "sqooler-example"
version = "0.1.0"
description = "A template for quantum simulators deployed on heroku"
authors = ["fretchen <fred.jendrzejewski@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
scipy = "^1.11.2"
python-decouple = "^3.6"
sqooler = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mypy = "^1.9.0"
black = "^24.2.0"
pylint = "^3.1.0"
pre-commit = "^3.6.0"
icecream = "^2.1.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "^2.0.0"
mkdocs-material = "^9.5.12"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
